IMPORTANT: addRecipe_btn no longer visible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -469,7 +469,7 @@ header {
   }
 
   & span {
-    /* display: none; */
+    display: none;
 
     padding-left: 10px;
 
